# HPCReact

./: .gitignore  ACKNOWLEDGEMENTS  CMakeLists.txt  LICENSE  README.md
.github/workflows/: continuousIntegration.yml
cmake/: CMakeBasics.cmake  Config.cmake  Macros.cmake
hostconfigs/LLNL/: dane-toss_4_x86_64_ib-clang@19.1.3.cmake  matrix-toss_4_x86_64_ib-clang@19.1.7-cuda@12.9.1.cmake  matrix-toss_4_x86_64_ib-gcc@13.3.1-cuda@12.9.1.cmake
hostconfigs/apple/: macOS_base.cmake
scripts/: ci_build_and_test.sh  ci_build_and_test_in_container.sh
src/: CMakeLists.txt  uncrustify.cfg
src/common/: CArrayWrapper.hpp  DirectSystemSolve.hpp  constants.hpp  logMath.hpp  macros.hpp  macrosCleanup.hpp  nonlinearSolvers.hpp  pmpl.hpp  printers.hpp  symmetricMatrix.hpp
src/common/unitTests/: CMakeLists.txt  testDirectSystemSolve.cpp
src/constitutive/activity/: Bdot.hpp
src/constitutive/ionicStrength/: SpeciatedIonicStrength.hpp  StoichiometricIonicStrength.hpp
src/constitutive/unitTests/: CMakeLists.txt  testBdot.cpp  testIonicStrength.cpp
src/docs/: CMakeLists.txt  unitTestSolutions.nb
src/docs/doxygen/: CMakeLists.txt  Doxyfile.in
src/reactions/: EquilibriumReactions.hpp  EquilibriumReactions_impl.hpp  KineticReactions.hpp  KineticReactions_impl.hpp  ReactionsBase.hpp  ReactionsBase_impl.hpp  ReactionsParameterData.hpp  ReactionsParameterDataPredefined.hpp
src/reactions/base/: ReactionsParametersBase.hpp
src/reactions/base/unitTests/: CMakeLists.txt
src/reactions/bulkDebyeHuckel/: EquilibriumReactions.hpp  EquilibriumReactions_impl.hpp  KineticReactions.hpp  KineticReactions_impl.hpp  Parameters.hpp  ParametersPredefined.hpp  ReactionsBase.hpp  ReactionsBase_impl.hpp
src/reactions/bulkDebyeHuckel/unitTests/: testEquilibriumReactions.cpp  testReactionsBase.cpp  testReactionsParameterData.cpp
src/reactions/bulkGeneric/: EquilibriumReactions.hpp  EquilibriumReactionsAggregatePrimaryConcentration_impl.hpp  EquilibriumReactionsReactionExtents_impl.hpp  EquilibriumReactions_impl.hpp  GenericSystems.hpp  KineticReactions.hpp  KineticReactions_impl.hpp  MixedEquilibriumKineticReactions.hpp  MixedEquilibriumKineticReactions_impl.hpp  Parameters.hpp  ParametersPredefined.hpp  SpeciesUtilities.hpp  utilities.hpp
src/reactions/bulkGeneric/unitTestUtilities/: kineticReactionsTest_utilities.hpp
src/reactions/bulkGeneric/unitTests/: CMakeLists.txt  testEquilibriumReactions.cpp  testKineticReactions.cpp  testMixedReactions.cpp  testSpeciesUtilities.cpp  testUtilities.cpp  testUtilities.nb
src/reactions/exampleSystems/: BulkGeneric.hpp  ChainGeneric.hpp  GenericSystems.hpp  MoMasBenchmark.hpp
src/reactions/exampleSystems/unitTests/: CMakeLists.txt  testEquilibriumReactions.cpp  testGenericChainReactions.cpp  testKineticReactions.cpp  testMixedReactions.cpp  testMomasEasyCase.cpp  testMomasMediumCase.cpp  testUtilities.nb
src/reactions/geochemistry/: Carbonate.hpp  EquilibriumReactions.hpp  EquilibriumReactions_impl.hpp  Forge.hpp  GeochemicalReactionsParameters.hpp  GeochemicalReactionsParametersPredefined.hpp  GeochemicalSystems.hpp  KineticReactions.hpp  KineticReactions_impl.hpp  Momas.hpp  Parameters.hpp  ParametersPredefined.hpp  ReactionsBase.hpp  ReactionsBase_impl.hpp  Ultramafics.hpp
src/reactions/geochemistry/unitTests/: CMakeLists.txt  testForgeReactions.cpp  testGeochemicalEquilibriumReactions.cpp  testGeochemicalKineticReactions.cpp  testGeochemicalMixedReactions.cpp  testKineticReactions.cpp  testMomasEasyCase.cpp  testReactionsBase.cpp  testReactionsParameterData.cpp
src/reactions/legacy/: ReactionsBase.hpp
src/reactions/liquidElectrolyteBatteryChemistry/: KineticReactions.hpp  KineticReactions_impl.hpp  Parameters.hpp
src/reactions/massActions/: MassActions.hpp
src/reactions/massActions/unitTests/: CMakeLists.txt  testMassActions.cpp
src/reactions/reactionsSystems/: EquilibriumReactions.hpp  EquilibriumReactionsAggregatePrimaryConcentration_impl.hpp  EquilibriumReactionsReactionExtents_impl.hpp  KineticReactions.hpp  KineticReactions_impl.hpp  MixedEquilibriumKineticReactions.hpp  MixedEquilibriumKineticReactions_impl.hpp  Parameters.hpp
src/reactions/unitTestUtilities/: equilibriumReactionsTestUtilities.hpp  kineticReactionsTestUtilities.hpp  mixedReactionsTestUtilities.hpp
src/reactions/unitTests/: CMakeLists.txt  MultiVector.hpp  testEquilibriumReactions.cpp  testKineticReactions.cpp  testReactionsBase.cpp  testReactionsParameterData.cpp
src/scripts/: EquilibriumStoichiometry.txt  systemReduction.py
src/scripts/unitTests/: systemReductionTest.txt
